basic events - click, hover, copy

--- a/index.html
+++ b/index.html
@@ -18,11 +18,27 @@
                     name: 'Maja',
                     age: 25
                 }
+                handleClick(e) {
+                    console.log(e.target);
+                }
+                handleMouseOver(e) {
+                    console.log(e.target, e.pageX);
+                }
+                handleCopy(e) {
+                    console.log('Try being original for once');
+                }
                 render() {
                     return (
                         <div className="app-content">
                             <h1>Hey, ninjas</h1>
                             <p>My name is: { this.state.name } and I am { this.state.age }</p>
+                            <button onClick={this.handleClick}
+                            // we are not invoking the function (this.handleClick()) because that would fire the function
+                            // as soon as the page is loaded, so we're just passing a reference to the function
+                            // and the app will find it when we fire it
+                            >Click me!</button>
+                            <button onMouseOver={this.handleMouseOver}>~Hover me~</button>
+                            <p onCopy={this.handleCopy}>What we think, we become.</p>
                         </div>
                     )
                 }
